--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -33,7 +33,7 @@ jobs:
       - name: login to GCR
         uses: docker/login-action@v1
         with:
-          registry: ${{ secrets.GCR }}
+          registry: us.gcr.io
           username: _json_key
           password: '${{ secrets.GCP_CREDS }}'
         
