--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -33,7 +33,7 @@ jobs:
       - name: login to GCR
         uses: docker/login-action@v1
         with:
-          registry: ${{ secrets.GCR }}
+          registry: us.gcr.io
           username: _json_key
           password: ${{ secrets.GCP_CREDS }}
         
@@ -47,7 +47,7 @@ jobs:
         run:  echo "GCP_REGISTRY=${{secrets.GCP_REGISTRY}}" >> $GITHUB_ENV
         
       - name: Build backend docker image
-        run: cd backend && docker build -t "${{ env.GCP_REGISTRY }}{{env.DOCKERBACKENDIMAGE}}:latest"
+        run: cd backend && docker build -t "${{ env.GCP_REGISTRY }}{{env.DOCKERBACKENDIMAGE}}:latest ."
       
 
           
