--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -19,7 +19,7 @@ env:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  Deployment:
+  Backend:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
@@ -37,17 +37,33 @@ jobs:
           username: _json_key
           password: '${{ secrets.GCP_CREDS }}'
         
-      - name: generating frontend image name 
-        run: echo "DOCKERFRONTENDIMAGE=silverwaredev-frontend-${{ env.branch }}-${{ env.jobid }}" >> $GITHUB_ENV
-      
-      - name: generating backend image name 
-        run: echo "DOCKERBACKENDIMAGE=silverwaredev-backend-${{ env.branch }}-${{ env.jobid }}" >> $GITHUB_ENV
-      
       - name: Adding gcp registry secret to env (for docker access)
         run:  echo "GCP_REGISTRY=${{secrets.GCP_REGISTRY}}" >> $GITHUB_ENV
         
       - name: Build backend docker image
         run: cd backend && docker build -t ${{ env.GCP_REGISTRY }}/silverware-369717/silverware/backend:latest .
       
-
+  Frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+        
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDS }}'
           
+      - name: login to GCR
+        uses: docker/login-action@v1
+        with:
+          registry: us.gcr.io
+          username: _json_key
+          password: '${{ secrets.GCP_CREDS }}'
+        
+      - name: Adding gcp registry secret to env (for docker access)
+        run:  echo "GCP_REGISTRY=${{secrets.GCP_REGISTRY}}" >> $GITHUB_ENV
+        
+      - name: Build backend docker image
+        run: cd frontend/frontend && docker build -t ${{ env.GCP_REGISTRY }}/silverware-369717/silverware/frontend:latest .
+
